--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,11 +1,11 @@
 a{
 	text-decoration: none;
-	color: #D7A0FF;
+	color:darkblue ;
 }
 
 header{
-	background: #FAF3FF;
-	padding: 9px 0;
+	background: #E8EDEF;
+	padding: 25px 0;
 }
 
 .navbar ul{
@@ -22,7 +22,7 @@ header{
 .navbar a{
 	font-size:15px;
 	font-weight:600;
-	color: #D7A0FF;
+	color: #61BDEA;
 	text-transform: uppercase;
 	display: flex;
 	align-items:center;
@@ -36,93 +36,86 @@ section {
 	overflow:hidden;
 }
 h2{
-	color: #AA39FD;
-	font-family: 'Playfair Display', serif;
-}
-h3{
-	font-family: 'Playfair Display', serif;
+	color: #6197DB;
+	font-family: 'Lato', sans-serif;
 }
 p{
-	font-family: 'PT Sans', sans-serif;
+
+	font-family: 'Lato', sans-serif;
+}
+h3{
+	font-family: 'Lato', sans-serif;
 }
 h4{
 	color:green;
-	font-family: 'Playfair Display', serif;
 }
 .card1{
-	width: 85%;
-	background-color: white;
-	color: #CF75C8;
-	border: 1px solid pink;
-	border-radius: 10px;
-/*	transition: 0.3s;*/
+	width:80%;
+	background-color:white;
+	color:#114B96;
+	border: 3px solid pink;
+	border-radius:20px;
+	transition: 0.5s;
 }
 .card1:hover{
-	scale:1.05;
-/*	background-color: #FFEBFD;*/
+     scale:1.1;
+     background-color:#91B1C2  ;
+}
 }
 .card1 p{
-	color:#848484;
-	font-size: 18px;
-}
-.card2{
-	width: 85%;
-background-color:white;
-color:black;
-border: 6px solid gray;
-border-radius: 12px;
-transition: 0.3s;
-}
-.card2:hover{
-scale:1.05;
-background-color: gray;
-}
-.card p{
-	color: #5B5B5B;
+	color:black;
 	font-size:15px;
 	text-align: justify;
+}
+.card2{
+    width: 80%;
+	background-color:white;
+	color:black;
+	border: 6px solid gray;
+	border-radius: 12px;
+	transition: 0.3s;
+}
+.card2:hover{
+	scale:1.1;
+	background-color: gray;
+}
+.card p{
+	color:black;
+	font-size:18px;
 }
 /*#piechart1{
 	border: 1px solid darkgray;
 	border-radius: 8px;
-	padding: 45px;
+	padding: 20px;
 }
 #barchart1{
-		border: 1px solid darkgray;
-	border-radius: 8px;
-		padding: 40px;
-
-}
-
-#linechart1{
 	border: 1px solid darkgray;
 	border-radius: 8px;
-	padding: 15px;
+	padding: 24px;
+
 }
 
-#linechart2{
+#newchart1{
 	border: 1px solid darkgray;
 	border-radius: 8px;
-	padding: 15px;
-}*/
-#linechart1{
-	margin-top: 88px;
+	padding: 20px;
 }
+#newchart2{
+	border: 1px solid darkgray;
+	border-radius: 8px;
+	padding: 20px;*/
+
 .graph-box{
-	background-color: #FCF6FE;
-	width: 85%;
-	height: 450px;
-	border: 1px solid #F4D3FF;
+	background-color:#E3EEFC  ;
+	width:85%;
+	height:450px;
+	border: 1px solid gray;
 	border-radius: 8px;
-	padding: 40px;
+	padding: 15px;
+
 }
-.graph-box h4{
-	color:#B550FF;
-}
-.graph-box p{
-	color: #6C6C6C;
 }
 .graph-box:hover{
-	scale:1.04;
+	scale:1.05;
 }
 
