--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -29,12 +29,12 @@
 			<div class="container">
 				<div class="row">
 					<h2 data-aos="fade-right">About Us</h2>
-					<div class="col-3">
+					<div class="col-md-6">
 						<p data-aos="fade-right"> We are members of the MU project, currently working as part of the history group. As a history group, we incorporate the element of history throughout our project. Our main goal of this project is to utilize the historical element by simplifying it or translating the historical information into English, which would make the consent more accessible to the non-Korean speakers. </p>
 					</div>
 
-					<div class="col-9">
-						<img src="../static/image1.jpg" class="img-fluid" data-aos="fade-left">
+					<div class="col-md-6">
+						<img src="../static/image2.jpg" class="img-fluid aboutimg" data-aos="fade-left">
 					</div>
 
 
@@ -49,7 +49,7 @@
 				<h2 data-aos = "fade up" data-aos-duration="1000">Dashboard - Data Analysis</h2>
 
 				<div class = "row mt-5">
-					<div class = 'col-6 d-flex align-item-center'>
+					<div class = 'col-md-6 d-flex align-item-center'>
 						<div class = "card card1 mx-auto" div data-aos="flip-up" data-aos-duraction="2000">
 							<div class = "card-body">
 								<h3 class="text-center">About Data</h3>
@@ -64,7 +64,7 @@
 
 
 					
-					<div class = 'col-6 d-flex align-item-center'>
+					<div class = 'col-md-6 d-flex align-item-center'>
 						<div class = "card card1 mx-auto" div data-aos="flip-down" data-aos-duraction="2000">
 							<div class = "card body">
 							</h3  class="text-center"> Statistics</h3>
@@ -86,9 +86,9 @@
 
 
 				<div class="row mt-5">
-					<div class="col-4" data-aos ="fade-right" data-aos-duration="1000">
+					<div class="col-md-4" data-aos ="fade-right" data-aos-duration="1000">
 						<div class= "graph-box mx-auto">
-						<h4>Title</h4>
+						<h4>Circle graph</h4>
 						<canvas id="piechart1" width="200" height="100"></canvas>
 					     </div>
 			          </div>
@@ -97,26 +97,26 @@
 
 
 
-					<div class="col-8" data-aos="fade-left" data-aos-duration="1000">
+					<div class="col-md-8" data-aos="fade-left" data-aos-duration="1000">
 						<div class= "graph-box mx-auto">
-							<h4>Title</h4>
+							<h4>Bar graph</h4>
                          <canvas class="barchart1" id="barchart1" width="200" height="100"></canvas>
 					     </div>
 				     </div>
 				</div>
 
 				<div class="row mt-5">
-					<div class="col-6" data-aos="fade-right" data-aos-duration="1000">
+					<div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
 						<div class= "graph-box mx-auto">
-						<h4>Title2</h4>
+						<h4>Line graph </h4>
 						<p>This data shows how many people of each age group visited the museum.</p>
 						<canvas id="newchart1" width="200" height="100"></canvas>
 					</div>
 				</div>
 
-					<div class="col-6" data-aos="fade-left" data-aos-duration="1000">
+					<div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
 						<div class= "graph-box mx-auto">
-					<h4>Title2</h4>
+					<h4>Line graph 2</h4>
 					<p>This data was obtained by asking a series of questions that determines someone's attitudes or sentiment toward the topic at hand. By using data science, people's responses were converted to a sentiment score. A score close to -1 indicates a negative sentiment, 1 indicates a positive one, and 0 indicates a neutral one.</p>
                          <canvas id="newchart2" width="200" height="100"></canvas>
 					</div>
